--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.0.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "realm": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
