--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-navigation": "^4.4.4",
     "realm": "^10.3.0"
   },
