--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,10 @@ target 'smartking' do
 
   pod 'RealmJS', :path => '../node_modules/realm'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'smartkingTests' do
     inherit! :complete
     # Pods for testing
