--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-random-values": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "realm": "^10.3.0"
   },
