--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-picker/picker": "^1.14.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -17,6 +18,7 @@
     "react-native-get-random-values": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal-datetime-picker": "^9.2.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.1",
