--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-picker/picker": "^1.14.0",
+    "loadsh": "^0.0.4",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -22,6 +24,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
