--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,10 @@ target 'smartking' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'smartkingTests' do
     inherit! :complete
     # Pods for testing
