--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "lint": "eslint .",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.4.7",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-picker/picker": "^1.14.0",
     "loadsh": "^0.0.4",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-camera": "^3.43.8",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -28,7 +31,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
-    "realm": "^10.3.0"
+    "realm": "^10.3.0",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
@@ -38,7 +42,11 @@
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.2",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.0",
+    "vuetify-loader": "^1.7.0"
   },
   "jest": {
     "preset": "react-native"
