--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'smartking' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'smartkingTests' do
     inherit! :complete
     # Pods for testing
