--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-picker/picker": "^1.14.0",
