--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
-    "realm": "^10.3.0",
-    "vuetify": "^2.4.0"
+    "react-number-format": "^4.5.5",
+    "realm": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
@@ -45,9 +45,7 @@
     "metro-react-native-babel-preset": "^0.65.2",
     "react-test-renderer": "17.0.1",
     "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.0",
-    "vuetify-loader": "^1.7.0"
+    "sass-loader": "^10.0.0"
   },
   "jest": {
     "preset": "react-native"
